# guid_generator

./: .gitignore  README.md
GenerateGUID/: GenerateGUID.sln
GenerateGUID/GenerateGUID/: GenerateGUID.cpp  GenerateGUID.vcxproj  GenerateGUID.vcxproj.filters  guid.txt
GuidGenerator/: CMakeLists.txt  main.cpp
